--- a/opcional-01.2.html
+++ b/opcional-01.2.html
@@ -1,1 +1,10 @@
 <!doctype html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>Mi primera página</title>
+	</head>
+	<body>
+		Mi primera página web
+	</body>
+</html>
