--- a/opcional-01.2.html
+++ b/opcional-01.2.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Mi primera página</title>
+		<link rel="stylesheet" type="text/css" href="css/styles.css" />
 	</head>
 	<body>
 		Mi primera página web
