[practica 2] Use a css style sheet

--- a/practica2-01.html
+++ b/practica2-01.html
@@ -5,6 +5,7 @@
 		<title>
 			Mozilla y sus socios llevan Firefox OS a nuevas plataformas y dispositivos
 		</title>
+		<link rel="stylesheet" type="text/css" href="css/practica2.css" />
 	</head>
 	<body>
 		<div class="wrapper-new">
