[practica 2] Display current datetime, using a javascript script

--- a/practica2-02.html
+++ b/practica2-02.html
@@ -6,9 +6,14 @@
 			Mozilla y sus socios llevan Firefox OS a nuevas plataformas y dispositivos
 		</title>
 		<link rel="stylesheet" type="text/css" href="css/practica2.css" />
+		<script src="js/functions.js"></script>
 	</head>
 	<body>
 		<div class="wrapper-new">
+			<span>
+				Está leyendo esta noticia el: <script>printCurrentDate();</script>
+			</span>
+
 			<span class="page">Página 2</span>
 
 			<h1>Sala de Prensa de Mozilla</h1>
