[practica 2] CSS style for current datetime

--- a/practica2-02.html
+++ b/practica2-02.html
@@ -10,9 +10,9 @@
 	</head>
 	<body>
 		<div class="wrapper-new">
-			<span>
+			<div class="datetime">
 				Está leyendo esta noticia el: <script>printCurrentDate();</script>
-			</span>
+			</div>
 
 			<span class="page">Página 2</span>
 
