--- a/opcional-03.03-fonts.html
+++ b/opcional-03.03-fonts.html
@@ -5,6 +5,7 @@
 			<title>Fonts</title>
 		</head>
 		<link rel="stylesheet" type="text/css" href="css/fonts.css">
+		<link href='http://fonts.googleapis.com/css?family=Caesar+Dressing' rel='stylesheet' type='text/css'>
 	<body>
 		<div class="wrapper-fonts">
 			<p class="firefox">
