--- a/opcional-05.01-while.html
+++ b/opcional-05.01-while.html
@@ -6,11 +6,10 @@
 		<script src="js/bucles.js"></script>
 	</head>
 	<body>
-		<div id="result"></div>
+		<div id="resultWhile"></div>
 	</body>
 	<script>
-		var result = document.getElementById("result");
-
+		var result = document.getElementById("resultWhile");
 		result.innerHTML = main(2);
 	</script>
 </html>
