[opcional 5.1] Unificar en un único html la lógica del codigo, mostrando dos links para que el usuario elija cual usar (for o while)

--- a/opcional-05.01.html
+++ b/opcional-05.01.html
@@ -6,10 +6,10 @@
 		<script src="js/bucles.js"></script>
 	</head>
 	<body>
-		<div id="resultWhile"></div>
+		<div>
+			<a href="javascript:main(1)">For</a>
+			<a href="javascript:main(2)">While</a>
+		</div>
+		<div id="result"></div>
 	</body>
-	<script>
-		var result = document.getElementById("resultWhile");
-		result.innerHTML = main(2);
-	</script>
 </html>
