[opcional 5.2] Activar y desactivar el reloj al pulsar sobre él

--- a/opcional-05.02.html
+++ b/opcional-05.02.html
@@ -6,6 +6,6 @@
 		<script src="js/eventos.js"></script>
 	</head>
 	<body onload="initialize()">
-		<div id="clock"></div>
+		<div id="clock">Haz click aquí para activar o desactivar el reloj</div>
 	</body>
 </html>
