[opcional 5.3] Utilizar el atributo placeholder para controlar los textos por defecto del input, tanto al inicio, como tras una respuesta fallida

--- a/opcional-05.03-inputs.html
+++ b/opcional-05.03-inputs.html
@@ -10,7 +10,7 @@
 			<h4>Pregunta:</h4>
 			<p>¿Quién descubrió América?</p>
 
-			<input id="txtAnswer" type="text" value="" />
+			<input id="txtAnswer" placeholder="Introduce tu respuesta aquí" type="text" value="" />
 
 			<button id="btnSubmit" onclick="check()">Consultar</button>
 
