--- a/opcional-05.04-zepto.html
+++ b/opcional-05.04-zepto.html
@@ -19,6 +19,6 @@
 			</p>
 		</div>
 
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/zepto/1.1.3/zepto.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/zepto/1.1.3/zepto.min.js"></script>
 	</body>
 </html>
