[opcional 6.1] Añadir una lista con cada una de las veces que se para el contador

--- a/opcional-06.01-cronometro.html
+++ b/opcional-06.01-cronometro.html
@@ -14,6 +14,8 @@
 		<button id="btnCambiar">Arrancar / Parar</button>
 		<button id="btnInicializar">Inicializar</button>
 
+		<div id="stops"></div>
+
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/zepto/1.1.3/zepto.min.js"></script>
 		<script src="js/cronometro.js"></script>
 	</body>
