--- a/practica6.html
+++ b/practica6.html
@@ -7,8 +7,11 @@
 		<script type="text/javascript">
 			$(function() {
 				localStorage.c = (localStorage.c || "0.0");
+				localStorage.stops = (localStorage.stops || "");
 
 				var t, cl = $("#crono");
+
+				var stops = $("#stops");
 
 				function incr() {
 					localStorage.c = +localStorage.c + 0.1;
@@ -32,6 +35,10 @@
 					clearInterval(t);
 
 					t = undefined;
+
+					localStorage.stops += localStorage.c + "<br/>";
+
+					stops.html(localStorage.stops);
 				};
 
 				function cambiar() {
@@ -50,6 +57,8 @@
 					"click",
 					function() {
 						localStorage.c = "0.0";
+						localStorage.stops = "";
+						stops.html(localStorage.stops);
 						mostrar();
 					}
 				);
@@ -65,5 +74,7 @@
 
 		<button id="btnCambiar">Arrancar / Parar</button>
 		<button id="btnInicializar">Inicializar</button>
+
+		<div id="stops"></div>
 	</body>
 </html>
