[practica 6] Mover las paradas a la derecha

--- a/practica6.html
+++ b/practica6.html
@@ -34,8 +34,10 @@
 
 			#stops {
 				border: 2px solid #ff8800;
-				padding: 5px;
 				border-radius: 5px;
+				float: right;
+				padding: 5px;
+				width: 50%;
 				z-index: 100;
 			}
 
@@ -120,11 +122,11 @@
 				<button id="btnCambiar">Arrancar / Parar</button>
 				<button id="btnInicializar">Inicializar</button>
 			</div>
-		</div>
 
-		<div id="stops">
-			<h4>Paradas Realizadas:</h4>
-			<div id="stopItems"></div>
+			<div id="stops">
+				<h4>Paradas Realizadas:</h4>
+				<div id="stopItems"></div>
+			</div>
 		</div>
 	</body>
 </html>
