[opcional 7.1] Usar SVG text para posicionar el reloj digital

--- a/opcional-07.01-reloj.html
+++ b/opcional-07.01-reloj.html
@@ -20,12 +20,9 @@
 		</script>
 	</head>
 	<body>
-		<div class="relojDigitalWrapper">
-			<div id="relojDigital" ></div>
-		</div>
-
 		<svg id="relojAnalogico" viewBox="0 0 200 200">
 			<circle id="corona" cx="100" cy="70" r="50" fill="white" />
+			<text id="relojDigital" x="77" y="60"></text>
 			<line id="horario" x1="100" y1="70" x2="110" y2="80" />
 			<line id="minutero" x1="100" y1="70" x2="80" y2="40" />
 			<line id="segundero" x1="100" y1="70" x2="115" y2="45" />
