--- a/practica8.html
+++ b/practica8.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <title>GMaps.js &mdash; Geolocation</title>
     <link rel="stylesheet" type="text/css" href="css/practica8.css" />
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
     <script type="text/javascript" src="js/gmaps.js"></script>
@@ -10,6 +11,24 @@
       var map, lat, lng;
 
       $(function() {
+        function enlazarMarcador(e) {
+          // muestra ruta entre marcas anteriores y actuales
+          map.drawRoute({
+            origin: [lat, lng],  // origen en coordenadas anteriores
+            // destino en coordenadas del click o toque actual
+            destination: [e.latLng.lat(), e.latLng.lng()],
+            travelMode: 'driving',
+            strokeColor: '#000000',
+            strokeOpacity: 0.6,
+            strokeWeight: 5
+          });
+
+          lat = e.latLng.lat();   // guarda coords para marca siguiente
+          lng = e.latLng.lng();
+
+          map.addMarker({ lat: lat, lng: lng});  // pone marcador en mapa
+        };
+
         function geolocalizar() {
           GMaps.geolocate({
             success: function(position) {
@@ -19,17 +38,19 @@
               map = new GMaps({  // muestra mapa centrado en coords [lat, lng]
                 el: '#map',
                 lat: lat,
-                lng: lng
+                lng: lng,
+                click: enlazarMarcador,
+                tap: enlazarMarcador
               });
 
               map.addMarker({ lat: lat, lng: lng});  // marcador en [lat, lng]
             },
             error: function(error) {
-              alert('Error: '+error.message);
+              alert('Geolocalización falla: '+error.message);
             },
             not_supported: function() {
-              alert("No soporta geolocalización");
-            },
+              alert("Su navegador no soporta geolocalización");
+            }
           });
         };
 
