[practica 8] Soportar cambiar el modo de viaje en la ruta: driving, walking, bicycling

--- a/practica8.html
+++ b/practica8.html
@@ -23,6 +23,15 @@
   <body>
     <h1>Geolocalización</h1>
     <div class="buttons">
+      <label for="driving">Driving</label>
+      <input name="rbTravelMode" id="driving" type="radio" value="driving" />
+
+      <label for="walking">Walking</label>
+      <input name="rbTravelMode" id="walking" type="radio" value="walking" />
+
+      <label for="bicycling">Bicycling</label>
+      <input name="rbTravelMode" id="bicycling" type="radio" value="bicycling" />
+
       <input id="btnCompactar" type="button" value="Compactar Rutas" />
     </div>
     <div id="map"></div>
