--- a/practica8.html
+++ b/practica8.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>GMaps.js &mdash; Geolocation</title>
     <link rel="stylesheet" type="text/css" href="css/practica8.css" />
-    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+    <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=true"></script>
     <script type="text/javascript" src="js/gmaps.js"></script>
     <script type="text/javascript" src="js/zepto.min.js"></script>
     <script type="text/javascript" src="js/practica8.js"></script>
