[practica 8] Predeterminar el modo de ruta como driving

--- a/practica8.html
+++ b/practica8.html
@@ -24,7 +24,7 @@
     <h1>Geolocalización</h1>
     <div class="buttons">
       <label for="driving">Driving</label>
-      <input name="rbTravelMode" id="driving" type="radio" value="driving" />
+      <input name="rbTravelMode" id="driving" checked="true" type="radio" value="driving" />
 
       <label for="walking">Walking</label>
       <input name="rbTravelMode" id="walking" type="radio" value="walking" />
